# fortran-descriptor-parser

./: Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml
.github/workflows/: ci.yaml
fortran-descriptor-parser/: Cargo.toml
fortran-descriptor-parser-macro/: Cargo.toml
fortran-descriptor-parser-macro/src/: lib.rs
fortran-descriptor-parser/src/: lib.rs
fortran-descriptor-parser/tests/: descriptor_tests.rs  from_slice_tests.rs
