[package]
name = "fortran-descriptor-parser-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LukaOber/fortran-descriptor-parser"
documentation = "https://docs.rs/fortran-descriptor-parser"
description = "Macro to parse bytes which are formatted according to a fortran format edit descriptor"
keywords = ["parser", "fortran", "macro"]
categories = ["parser-implementations", "parsing-tools"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
